plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'org.graalvm.buildtools.native' version '0.10.3'
	id "io.freefair.lombok" version "8.10.2"
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-quartz'
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.18.1'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
	implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.6.3'
	annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.6.3'
	implementation group: 'com.opencsv', name: 'opencsv', version: '5.9'
	implementation group: 'org.projectlombok', name: 'lombok-mapstruct-binding', version: '0.2.0'
}


tasks.named('test') {
	useJUnitPlatform()
}
